package com.pahanaedu.billing;


public interface BillingStrategy {
    double calculate(double units);
}
